# client_credentials_client

./: .gitignore  Cargo.toml  LICENSE  README.md  client_credentials_client.yml.tmp
src/: api.rs  color.rs  config.rs  main.rs  request.rs
src/config/: fetch_value.rs  mod.rs  oauth_config.rs  token_config.rs
src/config/api_config/: api_variable_config.rs  mod.rs
