[package]
name = "client_credentials_client"
version = "0.1.0"
authors = ["nekomaho <nekosatoru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "3.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
yaml-rust = "0.4"
colored = "2"
clap = "3.0.0-beta.1"
